Updates from Overleaf

--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -8,7 +8,35 @@
   year={2023},
   publisher={De Gruyter}
 }
+@book{comrie1989language,
+  title={Language universals and linguistic typology: Syntax and morphology},
+  author={Comrie, Bernard},
+  year={1989},
+  publisher={University of Chicago press}
+}
 
+@book{meyer2016culture,
+  title={The culture map: Breaking through the invisible boundaries of global business},
+  author={Meyer, Erin},
+  year={2016},
+  publisher={PublicAffairs}
+}
+
+@book{hall1976beyond,
+  title={Beyond culture},
+  author={Hall, Edward T},
+  year={1976},
+  publisher={Anchor}
+}
+
+@book{william1990typology,
+  title={Typology and universals},
+  author={William, Croft},
+  year={1990},
+    address={Cambridge},
+bookseries={Cambrdige Textbooks in Linguistics},
+  publisher={Cambridge University Press}
+}
 
 @article{lupyan2010language,
   title={Language structure is partly determined by social structure},
@@ -67,7 +95,26 @@
     address={Singapore},
     year = {2024}
 }
+@article{west2022best,
+  title={Best practice in statistics: The use of log transformation},
+  author={West, Robert M},
+  journal={Annals of Clinical Biochemistry},
+  volume={59},
+  number={3},
+  pages={162--165},
+  year={2022},
+  publisher={SAGE Publications Sage UK: London, England}
+}
 
+@article{changyong2014log,
+  title={Log-transformation and its implications for data analysis},
+  author={Changyong, FENG and Hongyue, WANG and Naiji, LU and Tian, CHEN and Hua, HE and Ying, LU and Xin, M TU},
+  journal={Shanghai archives of psychiatry},
+  volume={26},
+  number={2},
+  pages={105},
+  year={2014}
+}
 
 @article{frank2011insensitivity,
   title={Insensitivity of the human sentence-processing system to hierarchical structure},
@@ -210,6 +257,16 @@ year={2022-2024}
 }
 
 
+@misc{ud_2_VERB_website, 
+url={https://universaldependencies.org/u/pos/VERB.html},
+author={de Marneffe, Marie  AND Filip Ginter AND Yoav Goldberg AND Jan Hajič AND Chris Manning AND Ryan McDonald AND Lori Levin AND Joakim Nivre AND Slav Petrov AND Sampo Pyysalo AND Nathan Schneider AND Sebastian Schuster AND Natalia Silveira AND Reut Tsarfaty AND Fran Tyers AND Amir Zeldes AND Dan Zeman},
+title={Verb},
+year={2022-2024}
+}
+
+
+
+
 @article{kettunen2014can,
   title={Can type-token ratio be used to show morphological complexity of languages?},
   author={Kettunen, Kimmo},
@@ -220,6 +277,51 @@ year={2022-2024}
   year={2014},
   publisher={Taylor \& Francis}
 }
+
+@inproceedings{cohen2008phone,
+  title={Phone information content influences phone duration},
+  author={Cohen-Priva, Uriel and Jurafsky, Dan},
+  booktitle={Conference on prosody and language processing},
+  year={2008}
+}
+
+
+@article{levshina2022frequency,
+  title={Frequency, informativity and word length: Insights from typologically diverse corpora},
+  author={Levshina, Natalia},
+  journal={Entropy},
+  volume={24},
+  number={2},
+  pages={280},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{bentz2023complexity,
+  title={Complexity trade-offs and equi-complexity in natural languages: a meta-analysis},
+  author={Bentz, Christian and Gutierrez-Vasques, Ximena and Sozinova, Olga and Samard{\v{z}}i{\'c}, Tanja},
+  journal={Linguistics Vanguard},
+  volume={9},
+  number={s1},
+  pages={9--25},
+  year={2023},
+  publisher={De Gruyter}
+}
+@article{levshina_gradient,
+url = {https://doi.org/10.1515/ling-2021-0098},
+title = {Why we need a gradient approach to word order},
+title = {},
+author = {Natalia Levshina and Savithry Namboodiripad and Marc Allassonnière-Tang and Mathew Kramer and Luigi Talamo and Annemarie Verkerk and Sasha Wilmoth and Gabriela Garrido Rodriguez and Timothy Michael Gupton and Evan Kidd and Zoey Liu and Chiara Naccarato and Rachel Nordlinger and Anastasia Panova and Natalia Stoynova},
+pages = {825--883},
+volume = {61},
+number = {4},
+journal = {Linguistics},
+doi = {doi:10.1515/ling-2021-0098},
+year = {2023},
+lastchecked = {2025-04-29}
+}
+
+
 @article{aceves2024human,
   title={Human languages with greater information density have higher communication speed but lower conversation breadth},
   author={Aceves, Pedro and Evans, James A},
@@ -235,6 +337,33 @@ year={2022-2024}
 @article{grambank_release, title = {Grambank reveals the importance of genealogical constraints on linguistic diversity and highlights the impact of language loss}, author = {Skirg{\aa}rd, Hedvig and Haynie, Hannah J. and Blasi, Dami{\'a}n E. and Hammarstr{\"o}m, Harald and Collins, Jeremy and Latarche, Jay J. and Lesage, Jakob and Weber, Tobias and Witzlack-Makarevich, Alena and Passmore, Sam and Chira, Angela and Maurits, Luke and Dinnage, Russell and Dunn, Michael and Reesink, Ger and Singer, Ruth and Bowern, Claire and Epps, Patience and Hill, Jane and Vesakoski, Outi and Robbeets, Martine and Abbas, Noor Karolin and Auer, Daniel and Bakker, Nancy A. and Barbos, Giulia and Borges, Robert D. and Danielsen, Swintha and Dorenbusch, Luise and Dorn, Ella and Elliott, John and Falcone, Giada and Fischer, Jana and Ghanggo Ate, Yustinus and Gibson, Hannah and G{\"o}bel, Hans-Philipp and Goodall, Jemima A. and Gruner, Victoria and Harvey, Andrew and Hayes, Rebekah and Heer, Leonard and Herrera Miranda, Roberto E. and H{\"u}bler, Nataliia and Huntington-Rainey, Biu and Ivani, Jessica K. and Johns, Marilen and Just, Erika and Kashima, Eri and Kipf, Carolina and Klingenberg, Janina V. and K{\"o}nig, Nikita and Koti, Aikaterina and Kowalik, Richard G. A. and Krasnoukhova, Olga and Lindvall, Nora L.M. and Lorenzen, Mandy and Lutzenberger, Hannah and Martins, T{\^o}nia R.A. and Mata German, Celia and van der  Meer, Suzanne and Montoya Samam{\'e}, Jaime and M{\"u}ller, Michael and Murado$\breve{g}$lu, Saliha and Neely, Kelsey and Nickel, Johanna and Norvik, Miina and Oluoch, Cheryl Akinyi and Peacock, Jesse and Pearey, India O.C. and Peck, Naomi and Petit, Stephanie and Pieper, S{\"o}ren and Poblete, Mariana and Prestipino, Daniel and Raabe, Linda and Raja, Amna and Reimringer, Janis and Rey, Sydney C. and Rizaew, Julia and Ruppert, Eloisa and Salmon, Kim K. and Sammet, Jill and Schembri, Rhiannon and Schlabbach, Lars and Schmidt, Frederick W.P. and Skilton, Amalia and Smith, Wikaliler Daniel and de  Sousa, Hil{\'a}rio and Sverredal, Kristin and Valle, Daniel and Vera, Javier and Vo{\ss}, Judith and Witte, Tim and Wu, Henry and Yam, Stephanie and Ye 葉婧婷, Jingting and Yong, Maisie and Yuditha, Tessa and Zariquiey, Roberto and Forkel, Robert and Evans, Nicholas and Levinson, Stephen C. and Haspelmath, Martin and Greenhill, Simon J. and Atkinson, Quentin D. and Gray, Russell D.}, year = {2023}, volume={9}, doi={10.1126/sciadv.adg6175}, issue={16},  journal = {Science Advances} } 
 
 
+@article{easterday2021syllable,
+  title={Syllable complexity and morphological synthesis: a well-motivated positive complexity correlation across subdomains},
+  author={Easterday, Shelece and Stave, Matthew and Allassonni{\`e}re-Tang, Marc and Seifart, Frank},
+  journal={Frontiers in Psychology},
+  volume={12},
+  pages={638659},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@book{Saussure1916,
+  author    = {Ferdinand de Saussure},
+  title     = {Cours de linguistique générale},
+  editor    = {Charles Bally and Albert Sechehaye},
+  year      = {1916},
+  publisher = {Payot},
+  address   = {Paris}
+}
+
+
+
+
+
+
+
+
+@misc{grambank_dataset_zenodo_v1, author       = {Hedvig Skirgård and Hannah J. Haynie and Harald Hammarström and Damián E. Blasi and Jeremy Collins and Jay Latarche and Jakob Lesage and Tobias Weber and Alena Witzlack-Makarevich and Michael Dunn and Ger Reesink and Ruth Singer and Claire Bowern and Patience Epps and Jane Hill and Outi Vesakoski and Noor Karolin Abbas and Sunny Ananth and Daniel Auer and Nancy A. Bakker and Giulia Barbos and Anina Bolls and Robert D. Borges and Mitchell Browen and Lennart Chevallier and Swintha Danielsen and Sinoël Dohlen and Luise Dorenbusch and Ella Dorn and Marie Duhamel and Farah El Haj Ali and John Elliott and Giada Falcone and Anna-Maria Fehn and Jana Fischer and Yustinus Ghanggo Ate and Hannah Gibson and Hans-Philipp Göbel and Jemima A. Goodall and Victoria Gruner and Andrew Harvey and Rebekah Hayes and Leonard Heer and Roberto E. Herrera Miranda and Nataliia Hübler and Biu H. Huntington-Rainey and Guglielmo Inglese and Jessica K. Ivani and Marilen Johns and Erika Just and Ivan Kapitonov and Eri Kashima and Carolina Kipf and Janina V. Klingenberg and Nikita König and Aikaterina Koti and Richard G. A. Kowalik and Olga Krasnoukhova and Kate Lynn Lindsey and Nora  L. M. Lindvall and Mandy Lorenzen and Hannah Lutzenberger and Alexandra Marley and Tânia R. A. Martins and Celia Mata German and Suzanne van der Meer and Jaime Montoya and Michael Müller and Saliha Murado$\breve{g}$lu and HunterGatherer and David Nash and Kelsey Neely and Johanna Nickel and Miina Norvik and Bruno Olsson and Cheryl Akinyi Oluoch and David Osgarby and Jesse Peacock and India O.C. Pearey and Naomi Peck and Jana Peter and Stephanie Petit and Sören Pieper and Mariana Poblete and Daniel Prestipino and Linda Raabe and Amna Raja and Janis Reimringer and Sydney C. Rey and Julia Rizaew and Eloisa Ruppert and Kim K. Salmon and Jill Sammet and Rhiannon Schembri and Lars Schlabbach and Frederick W. P. Schmidt and Dineke Schokkin and Jeff Siegel and Amalia Skilton and Hilário de Sousa and Kristin Sverredal and Daniel Valle and Javier Vera and Judith Voß and Daniel Wikalier Smith and Tim Witte and Henry Wu and Stephanie Yam and Jingting Ye 葉婧婷 and Maisie Yong and Tessa Yuditha and Roberto Zariquiey and Robert Forkel and Nicholas Evans and Stephen C. Levinson and Martin Haspelmath and Simon J. Greenhill and Quentin D. Atkinson and Russell D. Gray}, title        = {Grambank v1.0}, month        = mar, year         = 2023, note         ={Dataset},  publisher    = {Zenodo}, version      = {v1.0}, doi          = {10.5281/zenodo.7740140}, url          = {https://doi.org/10.5281/zenodo.7740140} }
  @misc{UD_2.14,
  title = {Universal Dependencies 2.14},
  author = {Zeman, Daniel and Nivre, Joakim and Abrams, Mitchell and Ackermann, Elia and Aepli, No{\"e}mi and Aghaei, Hamid and Agi{\'c}, {\v Z}eljko and Ahmadi, Amir and Ahrenberg, Lars and Ajede, Chika Kennedy and Akkurt,
@@ -269,6 +398,121 @@ u}z{\={\i}}tis, Normunds and Guillaume, Bruno and Guiller, Kirian and Guillot-Ba
   pages     = {1--343}
 }
 
+@InProceedings{SPROAT14.47,
+  author = {Richard Sproat and Bruno Cartoni and Hyunjeong Choe and David Huynh and Linne Ha and Ravindran Rajakumar and Evelyn Wenzel-Grondie},
+  title = {A Database for Measuring Linguistic Information Content},
+  booktitle = {Proceedings of the Ninth International Conference on Language Resources and Evaluation (LREC'14)},
+  year = {2014},
+  month = {may},
+  date = {26-31},
+  address = {Reykjavik, Iceland},
+  editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Hrafn Loftsson and Bente Maegaard and Joseph Mariani and Asuncion Moreno and Jan Odijk and Stelios Piperidis},
+  publisher = {European Language Resources Association (ELRA)},
+  isbn = {978-2-9517408-8-4},
+  language = {english}
+ }
+
+
+
+@misc{glottolog5.0,
+author= {Harald Hammarström AND Robert Forkel AND Martin Haspelmath AND Sebastian Bank}, 
+year={2024},
+title={glottolog/glottolog: Glottolog database 5.0 (v5.0)}, 
+howpublished={[Data set]. Zenodo}, 
+doi={https://doi.org/10.5281/zenodo.10804357}
+}
+
+@incollection{wals-22,
+  author    = {Balthasar Bickel and Johanna Nichols},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Zenodo},
+  title     = {Inflectional Synthesis of the Verb (v2020.4)},
+  type      = {Data set},
+  url       = {https://doi.org/10.5281/zenodo.13950591},
+  year      = {2013},
+  doi       = {10.5281/zenodo.13950591}
+}
+
+
+
+
+
+
+
+@article{dale_lupyan_2012,
+author = {DALE, RICK and LUPYAN, GARY},
+title = {UNDERSTANDING THE ORIGINS OF MORPHOLOGICAL DIVERSITY: THE LINGUISTIC NICHE HYPOTHESIS},
+journal = {Advances in Complex Systems},
+volume = {15},
+number = {03n04},
+pages = {1150017},
+year = {2012},
+doi = {10.1142/S0219525911500172},
+
+URL = { 
+    
+        https://doi.org/10.1142/S0219525911500172
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1142/S0219525911500172
+    
+    
+
+}
+,
+    abstract = { Human language is unparalleled in both its expressive capacity and its diversity. What accounts for the enormous diversity of human languages [13]? Recent evidence suggests that the structure of languages may be shaped by the social and demographic environment in which the languages are learned and used. In an analysis of over 2000 languages Lupyan and Dale [25] demonstrated that socio-demographic variables, such as population size, significantly predicted the complexity of inflectional morphology. Languages spoken by smaller populations tend to employ more complex inflectional systems. Languages spoken by larger populations tend to avoid complex morphological paradigms, employing lexical constructions instead. This relationship may exist because of how language learning takes place in these different social contexts [44, 45]. In a smaller population, a tightly-knit social group combined with exclusive or almost exclusive language acquisition by infants permits accumulation of complex inflectional forms. In larger populations, adult language learning and more extensive cross-group interactions produce pressures that lead to morphological simplification. In the current paper, we explore this learning-based hypothesis in two ways. First, we develop an agent-based simulation that serves as a simple existence proof: As adult interaction increases, languages lose inflections. Second, we carry out a correlational study showing that English-speaking adults who had more interaction with non-native speakers as children showed a relative preference for over-regularized (i.e. morphologically simpler) forms. The results of the simulation and experiment lend support to the linguistic niche hypothesis: Languages may vary in the ways they do in part due to different social environments in which they are learned and used. In short, languages adapt to the learning constraints and biases of their learners. }
+}
+
+
+
+
+
+@book{levinson2024dark,
+  title={The dark matter of pragmatics: Known unknowns},
+  author={Levinson, Stephen C},
+  year={2024},
+  publisher={Cambridge University Press}
+}
+
+@article{cardon2008critique,
+  title={A critique of Hall's contexting model: A meta-analysis of literature on intercultural business and technical communication},
+  author={Cardon, Peter W},
+  journal={Journal of Business and Technical Communication},
+  volume={22},
+  number={4},
+  pages={399--428},
+  year={2008},
+  publisher={SAGE Publications},
+  address={Los Angeles}
+}
+
+@book{wals,
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Zenodo},
+  title     = {WALS Online (v2020.4)},
+  type      = {Data set},
+  url       = {https://doi.org/10.5281/zenodo.13950591},
+  year      = {2013},
+  doi       = {10.5281/zenodo.13950591}
+}
+@InProceedings{ritchie-etal-2024-linguameta-unified,
+  author    = {Ritchie, Sandy and van Esch, Daan and Okonkwo, Uche and Vashishth, Shikhar and Drummond, Emily},
+  title     = {LinguaMeta: Unified metadata for thousands of languages},
+  booktitle      = {Proceedings of the Joint International Conference on Computational Linguistics, Language Resources and Evaluation},
+  month          = {May},
+  year           = {2024},
+  address        = {Torino, Italy},
+  publisher      = {European Language Resources Association},
+  pages     = {10530–-10538},
+  abstract  = {We introduce LinguaMeta, a unified resource for language metadata for thousands of languages, including language codes, names, number of speakers, writing systems, countries, official status, and geographic coordinates. The resources are drawn from various existing repositories and supplemented with our own research. Each data point is tagged for its origin, allowing us to easily trace back to and improve existing resources with more up-to-date and complete metadata. The resource is intended for use by researchers and organizations who aim to extend technology to thousands of languages.},
+  url       = {https://aclanthology.org/2024.lrec-main.921},
+}
+
 @article{bentz2013languages,
   title={Languages with more second language learners tend to lose nominal case},
   author={Bentz, Christian and Winter, Bodo},
@@ -280,15 +524,6 @@ u}z{\={\i}}tis, Normunds and Guillaume, Bruno and Guiller, Kirian and Guillot-Ba
   publisher={Brill}
 }
 
-@article{cotterell2019complexity,
-  title={On the complexity and typology of inflectional morphological systems},
-  author={Cotterell, Ryan and Kirov, Christo and Hulden, Mans and Eisner, Jason},
-  journal={Transactions of the Association for Computational Linguistics},
-  volume={7},
-  pages={327--342},
-  year={2019},
-  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
-}
 
 @article{schnell2022crosslinguistic,
   title={Crosslinguistic corpus studies in linguistic typology},
@@ -369,4 +604,24 @@ u}z{\={\i}}tis, Normunds and Guillaume, Bruno and Guiller, Kirian and Guillot-Ba
   pages={383--410},
   year={2021},
   publisher={De Gruyter}
+}
+
+@incollection{ackerman2009parts,
+  title={Parts and wholes: Implicative patterns in inflectional paradigms},
+  author={Ackerman, Farrell and Blevins, James P and Malouf, Robert},
+  editors={James P. Blevins AND Juliette Blevins},
+  booktitle={Analogy in grammar: Form and acquisition},
+  publisher={Oxford University Press},
+  address={Oxford},
+  year={2009}
+}
+
+@article{cotterell2019complexity,
+  title={On the complexity and typology of inflectional morphological systems},
+  author={Cotterell, Ryan and Kirov, Christo and Hulden, Mans and Eisner, Jason},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={7},
+  pages={327--342},
+  year={2019},
+  publisher={MIT Press}
 }
