Updates from Overleaf

--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -486,6 +486,36 @@ abstract = { Human language is unparalleled in both its expressive capacity and 
   year      = {2013},
   doi       = {10.5281/zenodo.13950591}
 }
+
+@inproceedings{Levshina_2024_ALT,
+    author = "Natalia Levshina",
+    title = {The number of core arguments in corpora with Universal Dependencies: The role of communicative efficiency and culture},
+    booktitle = {The 15th Biennial Conference of the Association for Linguistic Typology}, 
+    publisher = {Nanyang Technological University},
+    address={Singapore},
+    year = {2024}
+}
+
+
+@article{bentz2015adaptive,
+  title={Adaptive communication: Languages with more non-native speakers tend to have fewer word forms},
+  author={Bentz, Christian and Verkerk, Annemarie and Kiela, Douwe and Hill, Felix and Buttery, Paula},
+  journal={PloS one},
+  volume={10},
+  number={6},
+  pages={e0128254},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+@inproceedings{levshina_2025_phylo_ws,
+    author = {Natalia Levshina},
+    title = {Who Did What to Whom - and Why? Untangling typological correlations from the perspective of communicative efficiency and token-based typology},
+    booktitle = {New Advances in Phylolinguistics},
+    year = {2025}
+}
+
+
+
 @InProceedings{ritchie-etal-2024-linguameta-unified,
   author    = {Ritchie, Sandy and van Esch, Daan and Okonkwo, Uche and Vashishth, Shikhar and Drummond, Emily},
   title     = {LinguaMeta: Unified metadata for thousands of languages},
@@ -542,16 +572,6 @@ abstract = { Human language is unparalleled in both its expressive capacity and 
   publisher={The Royal Society}
 }
 
-@article{bentz2015adaptive,
-  title={Adaptive communication: Languages with more non-native speakers tend to have fewer word forms},
-  author={Bentz, Christian and Verkerk, Annemarie and Kiela, Douwe and Hill, Felix and Buttery, Paula},
-  journal={PloS one},
-  volume={10},
-  number={6},
-  pages={e0128254},
-  year={2015},
-  publisher={Public Library of Science San Francisco, CA USA}
-}
 
 @incollection{tamariz2008regularity,
   title={Regularity in mappings between signals and meanings},
