--- a/latex/used_packages_table.tex
+++ b/latex/used_packages_table.tex
@@ -1,32 +1,34 @@
-% latex table generated in R 4.4.3 by xtable 1.8-4 package
-% Tue Apr 29 18:25:09 2025
+% latex table generated in R 4.5.1 by xtable 1.8-4 package
+% Fri Jul 11 17:01:19 2025
 \begin{longtable}{p{2.5cm}p{2.5cm}}
   \toprule
 Package & Version \\ 
   \midrule
-base & 4.4.3 \\ 
-  MASS & 7.3-64 \\ 
+readr & 2.1.5 \\ 
   dplyr & 1.1.4 \\ 
-  tidyr & 1.3.1 \\ 
-  randomcoloR & 1.1.0.1 \\ 
-  ggplot2 & 3.5.1 \\ 
-  stats & 4.4.3 \\ 
-  graphics & 4.4.3 \\ 
-  GGally & 2.2.1 \\ 
-  readr & 2.1.5 \\ 
   plyr & 1.8.9 \\ 
+  MASS & 7.3-65 \\ 
+  ggplot2 & 3.5.2 \\ 
   ggpubr & 0.6.0 \\ 
   stringr & 1.5.1 \\ 
   viridis & 0.6.5 \\ 
-  SH.misc & 0.0.0.9000 \\ 
   reshape2 & 1.4.4 \\ 
-  data.table & 1.16.4 \\ 
-  rcldf & 1.3.1 \\ 
-  utils & 4.4.3 \\ 
-  rgrambank & 1.0 \\ 
+  tidyr & 1.3.1 \\ 
   udpipe & 0.8.11 \\ 
-  groundhog & 3.2.2 \\ 
-  remotes & 2.5.0 \\ 
+  devtools & 2.4.5 \\ 
+  magrittr & 2.0.3 \\ 
+  archive & 1.1.12 \\ 
+  bib2df & 1.1.2.0 \\ 
+  logger & 0.4.0 \\ 
+  csvwr & 0.1.7 \\ 
+  urltools & 1.7.3 \\ 
+  tibble & 3.3.0 \\ 
+  maps & 3.4.3 \\ 
+  mapproj & 1.2.12 \\ 
+  purrr & 1.1.0 \\ 
+  Rtsne & 0.17 \\ 
+  randomcoloR & 1.1.0.1 \\ 
+  GGally & 2.2.1 \\ 
    \bottomrule
 \caption{Table of R-packages used.} 
 \label{r_package_table}
